# data_engineer_code_challenge

./: .gitignore  README.md  deploy.sh
common/: pyproject.toml
common/src/common/: readers.py  session.py  writers.py
gold/: main.py  pyproject.toml
gold/infrastructure/: config.py
gold/transformations/: etl.py  metrics.py
infrastructure/: docker-compose.yaml  pyproject.toml
infrastructure/airflow_image/: Dockerfile
infrastructure/dags/: etl_pipeline.py
infrastructure/jobs/gold/: main.py
infrastructure/jobs/gold/yaml_config/: most_viewed_courses.yaml  users_platforms.yaml
infrastructure/jobs/silver/: main.py
infrastructure/spark_image/: Dockerfile
silver/: pyproject.toml
silver/infrastructure/: checkpoint.py  config.py  log.py
silver/tests/: test_setup.py
silver/tests/test_transformations/: test_transformers.py
silver/transformations/: etl.py  transformers.py
silver/yaml_config/: table_data.yaml
